// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph Element adds the extraSmall modifier 1`] = `
<p
  className="sc-bdVaJa nBIQZ"
>
  A paragraph
</p>
`;

exports[`Paragraph Element adds the italic modifier 1`] = `
<p
  className="sc-bdVaJa jlyneo"
>
  A paragraph
</p>
`;

exports[`Paragraph Element adds the large modifier 1`] = `
<p
  className="sc-bdVaJa ihykMf"
>
  A paragraph
</p>
`;

exports[`Paragraph Element adds the small modifier 1`] = `
<p
  className="sc-bdVaJa ePiLEH"
>
  A paragraph
</p>
`;

exports[`Paragraph Element renders correctly 1`] = `
<p
  className="sc-bdVaJa gKsUTs"
>
  A paragraph
</p>
`;
